Further PR changes
Refactored duplicate filter function in export-builder and changed
endpoint params back to spinal case. Also added swagger schema for son
export.
